[gd_scene load_steps=2 format=3 uid="uid://cphspo0fltqev"]

[ext_resource type="Script" path="res://addons/kamran_wali/duniya_skapare/ds_wave_function_collapse_plugin/ds_name_input.gd" id="1_p1lun"]

[node name="name_input" type="HBoxContainer"]
custom_minimum_size = Vector2(1152, 30)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -617.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p1lun")

[node name="Label_ID" type="Label" parent="."]
layout_mode = 2
text = "Object1:"

[node name="Txt_Name" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "Give Name"
expand_to_text_length = true

[connection signal="text_changed" from="Txt_Name" to="." method="_on_txt_name_text_changed"]
